<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.demo.hdz.mediacodecdemo.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/file_path"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/etSavePath"
                    android:inputType="text"
                    android:hint="@string/file_save_path"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <Button
                    android:id="@+id/btnSelectSavePath"
                    android:text="..."
                    android:padding="0dp"
                    android:layout_width="50dp"
                    android:layout_height="40dp" />
            </LinearLayout>
            <Button
                android:id="@+id/btnRecordScreen"
                android:text="@string/screen_record"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/file_path"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/etH264FilePath"
                    android:inputType="text"
                    android:hint="@string/h264_file_path"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <Button
                    android:id="@+id/btnSelectH264File"
                    android:text="..."
                    android:padding="0dp"
                    android:layout_width="50dp"
                    android:layout_height="40dp" />
            </LinearLayout>
            <Button
                android:id="@+id/btnPlayH264"
                android:text="@string/play_h264_file"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>
    </LinearLayout>

    <SurfaceView
        android:id="@+id/playView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>
